2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* LisaRoman.cs:
	* packages.config:
	* Claunia.Encoding.Tests.csproj: First version, supports only
	Apple Lisa encoding.
