@@ -1,3 +1,7 @@
+2016-08-19  Natalia Portillo  <claunia@claunia.com>
+
+	* LisaRoman.cs: Code cleanup.
+
 2016-08-18  Natalia Portillo  <claunia@claunia.com>
 
 	* LisaRoman.cs:
